--- a/stylenew.css
+++ b/stylenew.css
@@ -1,3 +1,7 @@
+body{
+    background: transparent;
+
+}
 .transaction thead, .transaction tbody {
     display: none
 }
@@ -81,7 +85,7 @@ h1.logo img {
     padding: 0;
 }
 #merchant-detail {
-    background: #222222 none repeat scroll 0 0;
+    background: transparent none repeat scroll 0 0;
 }
 #merchant-detail .container .sixteen.columns {
     color: white;
@@ -101,7 +105,7 @@ h1.logo img {
     text-align: right;
 }
 #main {
-    background: #222222 none repeat scroll 0 0;
+    background: transparent none repeat scroll 0 0;
     padding-bottom: 10px;
     padding-top: 0;
 }
@@ -121,7 +125,7 @@ h1.logo img {
     color: #fcce08;
 }
 #payment-options {
-    background: #333 none repeat scroll 0 0;
+    background: transparent none repeat scroll 0 0;
     border-top: 1px solid rgba(0, 0, 0, 0.5);
     padding-bottom: 10px;
     padding-top: 10px;
