--- a/stylemember.css
+++ b/stylemember.css
@@ -18,6 +18,7 @@ body {
     float: none;
     margin: 0 auto;
     width: 96%;
+    display: none;
 }
 #non-member fieldset > p.field:nth-child(1), #non-member fieldset > p.field:nth-child(2), #non-member fieldset > p.field:nth-child(3) {
     display: none;
